Added new JupyterNotebook
...containing new Transition matrix generation approach

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ pytometry/.idea/workspace.xml
 *.pyc
 pytometry/.idea/inspectionProfiles/profiles_settings.xml
 
+pytometry/.idea/workspace.xml
+pytometry/.idea/workspace.xml
+pytometry/HSNE/.ipynb_checkpoints/NewTechniqueSearchNB-checkpoint.ipynb
