--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ pytometry/.idea/inspectionProfiles/profiles_settings.xml
 pytometry/.idea/workspace.xml
 pytometry/.idea/workspace.xml
 pytometry/HSNE/.ipynb_checkpoints/NewTechniqueSearchNB-checkpoint.ipynb
+pytometry/HSNE/test/.ipynb_checkpoints/hsne_test_notebook-checkpoint.ipynb
+pytometry/HSNE/test/.ipynb_checkpoints/NewTechniqueSearchNB-checkpoint.ipynb
