Added test .h5ad file and replaced absolute path

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ pytometry/.idea/workspace.xml
 pytometry/HSNE/.ipynb_checkpoints/NewTechniqueSearchNB-checkpoint.ipynb
 pytometry/HSNE/test/.ipynb_checkpoints/hsne_test_notebook-checkpoint.ipynb
 pytometry/HSNE/test/.ipynb_checkpoints/NewTechniqueSearchNB-checkpoint.ipynb
+pytometry/gating/test/datasets/temp.fcs
