--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ pytometry/HSNE/test/.ipynb_checkpoints/NewTechniqueSearchNB-checkpoint.ipynb
 pytometry/gating/test/datasets/temp.fcs
 pytometry/HUMAP/test/datasets/VBh_converted.h5ad
 pytometry/gating/test/datasets/VBh_converted.h5ad
+pytometry/HUMAP/test/.ipynb_checkpoints/newTechniqueTestNB-checkpoint.ipynb
