--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ pytometry/HUMAP/test/datasets/VBh_converted.h5ad
 pytometry/gating/test/datasets/VBh_converted.h5ad
 pytometry/HUMAP/test/.ipynb_checkpoints/newTechniqueTestNB-checkpoint.ipynb
 pytometry/.idea/libraries/R_User_Library.xml
+pytometry/HSNE/.ipynb_checkpoints/hsne_test_notebook-checkpoint.ipynb
+pytometry/HSNE/test/datasets/VBh_converted.h5ad
