--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ pytometry/HUMAP/test/.ipynb_checkpoints/newTechniqueTestNB-checkpoint.ipynb
 pytometry/.idea/libraries/R_User_Library.xml
 pytometry/HSNE/.ipynb_checkpoints/hsne_test_notebook-checkpoint.ipynb
 pytometry/HSNE/test/datasets/VBh_converted.h5ad
+pytometry/.ipynb_checkpoints/Eval_NB-checkpoint.ipynb
+pytometry/.ipynb_checkpoints/Eval_NB-checkpoint.ipynb
